# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml
.qwen/: settings.json
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  server.py
nanobot/: .dockerignore  Dockerfile  entrypoint.py  pyproject.toml  pyproject.toml.build
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
