[project]
name = "mcp-obs"
version = "0.1.0"
description = "Observability MCP server for VictoriaLogs and VictoriaTraces"
requires-python = ">=3.14"
dependencies = ["mcp>=1.26.0", "httpx>=0.28.0"]

[project.scripts]
mcp-obs = "mcp_obs.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
